# StomaSense_firmware

./: .gitmodules  README.md
rp2040/: CMakeLists.txt
rp2040/libs/: CMakeLists.txt
rp2040/libs/FreeRTOS-Config/: FreeRTOSConfig.h
rp2040/libs/bme280/: CMakeLists.txt  bme280_lib.c  bme280_lib.h
rp2040/src/: CMakeLists.txt  FreeRTOSStatic.h  bme280.c  bme280.h  main.c  utils.h
